# Offline-Wallet-for-Blind

./: CMakeLists.txt  README.md
components/AdafruitBusIO/: CMakeLists.txt
components/AdafruitPN532/: CMakeLists.txt
components/Cipher/: CMakeLists.txt
components/NDEF/: CMakeLists.txt
components/PN532/: CMakeLists.txt
components/ThingSpeak/: CMakeLists.txt
components/TinyGPSPlus/: CMakeLists.txt
main/: CMakeLists.txt  EEPROM_FNS.cpp  EEPROM_FNS.h  EncryptionUtils.cpp  EncryptionUtils.h  GPS_FNS.cpp  GPS_FNS.h  NFC_FNS.cpp  NFC_FNS.h  idf_component.yml  main.cpp
